--- a/src/power/templates/charts.html
+++ b/src/power/templates/charts.html
@@ -41,7 +41,7 @@ $(document).ready(function(){
   };
  
   // The url for our json data
-  var jsonurl = "api/raw/data/?format=json";
+  var jsonurl = "/api/raw/data/?format=json";
  
   // passing in the url string as the jqPlot data argument is a handy
   // shortcut for our renderer.  You could also have used the
