Changed the breadcrumbs to say "Settings" instead of "Home"
git-svn-id: svn://dunari.cis.vtc.edu/POWER@297 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/templates/admin/change_list.html
+++ b/src/power/templates/admin/change_list.html
@@ -40,7 +40,7 @@
 {% if not is_popup %}
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+<a href="{% url 'admin:index' %}">{% trans 'Settings' %}</a>
 &rsaquo; <a href="{% url 'admin:app_list' app_label=cl.opts.app_label %}">{{ app_label|capfirst|escape }}</a>
 &rsaquo; {{ cl.opts.verbose_name_plural|capfirst }}
 </div>
@@ -90,9 +90,11 @@
 
       {% block result_list %}
           {% if action_form and actions_on_top and cl.full_result_count %}{% admin_actions %}{% endif %}
+          <!-- Here2 -->
           {% result_list cl %}
           {% if action_form and actions_on_bottom and cl.full_result_count %}{% admin_actions %}{% endif %}
       {% endblock %}
+      <!-- Here! -->
       {% block pagination %}{% pagination cl %}{% endblock %}
       </form>
     </div>
