--- a/src/power/templates/admin/500.html
+++ b/src/power/templates/admin/500.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-<a href="{% url 'admin:index' %}">{% trans 'Home' %}</a>
+<a href="{% url 'admin:index' %}">{% trans 'Settings' %}</a>
 &rsaquo; {% trans 'Server error' %}
 </div>
 {% endblock %}
