Finished the add device dialog
git-svn-id: svn://dunari.cis.vtc.edu/POWER@298 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/templates/home.html
+++ b/src/power/templates/home.html
@@ -21,7 +21,7 @@
 {% block content %}
     <h2>Quick Links</h2>
     <ul>
-        <li><a href="{% url admin:device_device_add %}">Add Device</a></li>
+        <li><a href="{% url admin:device_device_add %}" onclick="return showAddAnotherPopup(this);">Add Device</a></li>
         <li><a href="{% url admin:satellite_satellite_add %}" onclick="return showAddAnotherPopup(this);">Add Satellite</a></li>
     </ul>
 {% endblock %}
