--- a/src/power/templates/admin/base.html
+++ b/src/power/templates/admin/base.html
@@ -26,7 +26,7 @@
                 <a href="{% url 'home' %}">Home</a>
             </li>
             <li>
-                <a href="#">View Data</a>
+                <a href="{% url 'view_data' %}">View Data</a>
             </li>
             <li>
                 <a href="{% url 'admin:index' %}">Settings</a>
