Fixed the URL's in view_data tempaltes
git-svn-id: svn://dunari.cis.vtc.edu/POWER@314 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/templates/view_data.html
+++ b/src/power/templates/view_data.html
@@ -160,7 +160,7 @@
 				</form>
 					<br>	
 			<form>
-				<input type="button" onClick="parent.location='view_data2.html'" value="Go!">
+				<input type="button" onClick="parent.location='{% url view_data2 %}'" value="Go!">
 			</form>	
 			</div>
 			
