--- a/src/power/templates/view_data2.html
+++ b/src/power/templates/view_data2.html
@@ -160,7 +160,7 @@
 				</form>
 					<br>	
 			<form>
-				<input type="button" onClick="parent.location='view_data.html'" value="Go!">
+				<input type="button" onClick="parent.location='{% url view_data %}'" value="Go!">
 			</form>	
 			</div>
 			
