--- a/src/power/templates/admin/base.html
+++ b/src/power/templates/admin/base.html
@@ -8,13 +8,13 @@
 <link rel="stylesheet" type="text/css" href="{% block stylesheet_rtl %}{% static "admin/css/rtl.css" %}{% endblock %}" />{% endif %}
 <script type="text/javascript">window.__admin_media_prefix__ = "{% filter escapejs %}{% static "admin/" %}{% endfilter %}";</script>
 
-	<link rel="stylesheet" href="static/css/dropdown/style.css">
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/dropdown/style.css">
 	<!--[if lte IE 7]>
-        <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen" />
+        <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/ie.css" media="screen" />
     <!--[endif]-->
 			
-	<script src="static/js/plugins/dropdown/jquery-1.3.1.min.js"></script>	
-	<script src="static/js/plugins/dropdown/jquery.dropdownPlain.js"></script>
+	<script src="{{ STATIC_URL }}js/plugins/dropdown/jquery-1.3.1.min.js"></script>	
+	<script src="{{ STATIC_URL }}js/plugins/dropdown/jquery.dropdownPlain.js"></script>
 <style>
 .sub_menu{
 	z-index:10000;
