git-svn-id: svn://dunari.cis.vtc.edu/POWER@317 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/templates/view_data.html
+++ b/src/power/templates/view_data.html
@@ -157,7 +157,7 @@
 						<option>2031</option>
 						<option>2032</option>
 					</select>	
-				</form>
+				</form><br>
 					<br>	
 			<form>
 				<input type="button" onClick="parent.location='{% url view_data2 %}'" value="Go!">
@@ -205,7 +205,7 @@
 					<option id="blue"> Blue</option>
 					<option id="purple"> Purple</option>
 				</select><br>
-				<label>Family Computer: </label>
+				<label>Desktop: </label>
 				<select name="devices">
 					<option>Not Displayed</option>
 					<option id="red"> Red</option>
