Made the URL for settings work
git-svn-id: svn://dunari.cis.vtc.edu/POWER@318 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/templates/admin/base.html
+++ b/src/power/templates/admin/base.html
@@ -52,9 +52,9 @@
             <li>
                 <a href="{% url 'admin:index' %}">Settings</a>
                 <ul class="sub_menu">
-                	<li class="dropdownwidth"><a href="{% url 'admin:index' %}">User Managment</a></li>
-                    <li class="dropdownwidth"><a href="{% url 'admin:index' %}">Device Managment</a></li>
-                    <li class="dropdownwidth"><a href="{% url 'admin:index' %}">Satellite Managment</a></li>
+                	<li class="dropdownwidth"><a href="{% url 'admin:auth_user_changelist' %}">User Managment</a></li>
+                    <li class="dropdownwidth"><a href="{% url 'admin:device_device_changelist' %}">Device Managment</a></li>
+                    <li class="dropdownwidth"><a href="{% url 'admin:satellite_satellite_changelist' %}">Satellite Managment</a></li>
                 </ul>
             </li>
         </ul>
