--- a/src/power/static/css/dropdown/style.css
+++ b/src/power/static/css/dropdown/style.css
@@ -1,10 +1,12 @@
-* 									{ margin: 0; padding: 0; }
-body								{ font: 14px Helvetica, Sans-Serif; } 
-#page-wrap							{ width: 800px; margin: 25px auto; } 
-a									{ text-decoration: none; }
-ul									{ list-style: none; }
-p                                   { margin: 15px 0; }
-
+*{margin-right:10px;}
+.jqplot-yaxis-label{
+margin-left:-35px;
+}
+.jqplot-table-legend{
+left:auto;
+right:0;
+z-index:10 !important;
+}
 /* 
 	LEVEL ONE
 */
