git-svn-id: svn://dunari.cis.vtc.edu/POWER@320 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/static/css/view_data.css
+++ b/src/power/static/css/view_data.css
@@ -8,7 +8,7 @@ background:orange;
 background:yellow;
 }
 #green{
-background:green;
+background:#1A5528;
 }
 #blue{
 background:blue;
@@ -39,12 +39,12 @@ height:300px;
 width:650px;
 }
 label{
-    display: inline-block;
-    float: left;
-    clear: left;
-	width:100px;
+display: inline-block;
+float: left;
+clear: left;
+width:100px;
 }
 select {
-  display: inline-block;
-  float: left;
+display: inline-block;
+float: left;
 }
