--- a/src/power/templates/view_data.html
+++ b/src/power/templates/view_data.html
@@ -36,7 +36,7 @@
 						['2012-11-05',60], ['2012-11-10',61], ['2012-11-15',62], ['2012-11-20',63], ['2012-11-25',64], ['2012-11-30',65], 
 						['2012-12-05',65], ['2012-12-10',67], ['2012-12-15',66], ['2012-12-20',65], ['2012-12-25',65], ['2012-12-30',66]];
                 var plot2 = $.jqplot('chart1', [line1], {
-                    seriesColors:["#1B56E0"],
+                    seriesColors:["#1A5528"],
                     legend:{
                         renderer: $.jqplot.EnhancedLegendRenderer,
                         show: true,
