--- a/src/power/templates/view_data2.html
+++ b/src/power/templates/view_data2.html
@@ -6,6 +6,11 @@
 {% block extrastyle %}
     <!-- Your extra CSS goes here -->
     <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/view_data.css" />
+    <link href="test.css" rel="stylesheet" type="text/css">
+    <link class="include" rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.jqplot.min.css" />
+    <link rel="stylesheet" type="text/css" href="examples.min.css" />
+    <link type="text/css" rel="stylesheet" href="syntaxhighlighter/styles/shCoreDefault.min.css" />
+    <link type="text/css" rel="stylesheet" href="syntaxhighlighter/styles/shThemejqPlot.min.css" />
 {% endblock %}
 
 {% block extrahead %}
