--- a/src/power/templates/view_data2.html
+++ b/src/power/templates/view_data2.html
@@ -38,8 +38,16 @@
 						['2012-10-05',56], ['2012-10-10',57], ['2012-10-15',57], ['2012-10-20',56], ['2012-10-25',58], ['2012-10-30',60], 
 						['2012-11-05',60], ['2012-11-10',61], ['2012-11-15',62], ['2012-11-20',63], ['2012-11-25',64], ['2012-11-30',65], 
 						['2012-12-05',65], ['2012-12-10',67], ['2012-12-15',66], ['2012-12-20',65], ['2012-12-25',65], ['2012-12-30',66]];
-                var line2=[['2012-05-05',40]];
-				var line3=[['2012-05-19',24], ['2012-06-25',23]];
+                var line2=[['2012-04-05',40], 	['2012-04-10',40], 	['2012-04-15',40], ['2012-04-20',40], ['2012-04-25',40], ['2012-04-30',40], 
+						['2012-05-05',40], ['2012-05-10',40], ['2012-05-15',39], ['2012-05-20',40], ['2012-05-25',40], ['2012-05-30',40], 	
+						['2012-06-05',38], 	['2012-06-10',40], 	['2012-06-15',40], ['2012-06-20',40], ['2012-06-25',40], ['2012-06-30',40], 
+						['2012-07-05',40], 	['2012-07-10',40], 	['2012-07-15',40], ['2012-07-20',41], ['2012-07-25',40], ['2012-07-30',40],
+						['2012-06-08',41], 	['2012-08-10',40], 	['2012-08-15',40], ['2012-08-20',40], ['2012-08-25',40], ['2012-08-30',40]];
+				var line3=[['2012-04-05',24], 	['2012-04-10',24], 	['2012-04-15',24], ['2012-04-20',24], ['2012-04-25',24], ['2012-04-30',24], 
+						['2012-05-05',24], ['2012-05-10',24], ['2012-05-15',23], ['2012-05-20',24], ['2012-05-25',24], ['2012-05-30',24], 	
+						['2012-06-05',23], 	['2012-06-10',24], 	['2012-06-15',24], ['2012-06-20',24], ['2012-06-25',25], ['2012-06-30',24], 
+						['2012-07-05',24], 	['2012-07-10',24], 	['2012-07-15',23], ['2012-07-20',24], ['2012-07-25',24], ['2012-07-30',24],
+						['2012-06-08',24], 	['2012-08-10',24], 	['2012-08-15',24], ['2012-08-20',24], ['2012-08-25',24], ['2012-08-30',24]];
 				var plot2 = $.jqplot('chart1', [line1, line2, line3], {
                     seriesColors:["red","green","blue"],
                     legend:{
