Fixed the log in issue. Also fixed the log out issue.
git-svn-id: svn://dunari.cis.vtc.edu/POWER@353 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/power/templates/admin/base.html
+++ b/src/power/templates/admin/base.html
@@ -67,7 +67,7 @@
                     <a href="{{ docsroot }}">{% trans 'Documentation' %}</a> /
                 {% endif %}
                 <a href="{% url 'admin:password_change' %}">{% trans 'Change password' %}</a> /
-                <a href="{% url 'admin:logout' %}">{% trans 'Log out' %}</a>
+                <a href="{% url 'auth_logout' %}">{% trans 'Log out' %}</a>
             {% endblock %}
         </div>
         {% else %}
