Base functionality *should* be back.
That is, you can log in and log out. Most of the wizards will need to be redone using django-compressor.

git-svn-id: svn://dunari.cis.vtc.edu/POWER@369 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/templates/powr/device_add.html
+++ b/src/haf/powr/templates/powr/device_add.html
@@ -2,14 +2,15 @@
 {% load i18n admin_static admin_modify %}
 {% load url from future %}
 {% load admin_urls %}
+{% load compress %}
 
 {% block title %}
     POW-R: Add Device
 {% endblock %}
 
 {% block extrahead %}
-    <script src="{{ STATIC_URL }}js/require.config.js"></script>
-    <script data-main="add_device" src="{{ STATIC_URL }}js/require.js"></script>
+    <!--<script src="{{ STATIC_URL }}js/require.config.js"></script>
+    <script data-main="add_device" src="{{ STATIC_URL }}js/require.js"></script>-->
 
     <script type="text/html" id="main">
         <p>Please tell us a little bit about your device, so that we can help you pick a unique name for it.</p>
@@ -51,6 +52,10 @@
             <p>Click <a href="javascript: self.close()">here</a> to close this window</p>
         {% endif %}
     </script>
+
+    {% compress js %}
+        <script type="text/coffee">console.log 'Hello world!'</script>
+    {% endcompress %}
 
 {% endblock %}
 
