Got a few test cases working
git-svn-id: svn://dunari.cis.vtc.edu/POWER@385 f2234473-aea0-4c34-a049-d44cbc1b6343

--- a/src/haf/powr/templates/powr/templates/satellite_add_add.html
+++ b/src/haf/powr/templates/powr/templates/satellite_add_add.html
@@ -1,4 +1,4 @@
     <script id="add" type="text/html">
-        <p>Adding Satellite...</p>
+        <p id="instructions">Adding Satellite...</p>
     </script>
 
