--- a/src/haf/powr/templates/powr/templates/satellite_add_searching.html
+++ b/src/haf/powr/templates/powr/templates/satellite_add_searching.html
@@ -2,6 +2,6 @@
         <div style="text-align: center; vertical-align: middle;">
         <img src="{{ STATIC_URL }}img/ajax-loader.gif" />
         </div>
-        <p>Searching for Satellite..</p>
+        <p id="instructions">Searching for Satellite..</p>
     </script>
 
