--- a/src/haf/powr/templates/powr/templates/satellite_add_verify.html
+++ b/src/haf/powr/templates/powr/templates/satellite_add_verify.html
@@ -1,6 +1,6 @@
     <script id="verify" type="text/html">
-        <p>I found the following Satellite:</p>
-        <span>{% templatetag openvariable %}serial_number{% templatetag closevariable %}</span>
+        <p id="instructions">I found the following Satellite:</p>
+        <span id="satellite_id">{% templatetag openvariable %}serial_number{% templatetag closevariable %}</span>
         <p>Hit back to search again, or continue to add this Satellite</p>
     </script>
 
