--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -1,22 +1,105 @@
-{% extends 'base.html' %}
-{% load i18n admin_static admin_modify %}
-{% load admin_urls %}
+{% load compress %}
+{% load url from future %}
+<!doctype html>
+<html lang="en" ng-app="haf">
+<head>
+  <title>POW-R :: New Graph</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  {% compress css %}
+  <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet" media="screen" type="text/css">
+  <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.css" rel="stylesheet" media="screen" type="text/css">
+  <link href="{{ STATIC_URL }}css/powr.css" rel="stylesheet" type="text/css">
+  <link href="{{ STATIC_URL }}components/jquery-ui/themes/ui-lightness/jquery-ui.css" rel="stylesheet" type="text/css">
+  <link href="{{ STATIC_URL }}components/jqplot/jquery.jqplot.css" rel="stylesheet" type="text/css">
+  {% endcompress %}
 
-{% block title %}
-      POW-R Resource Monitor
-{% endblock %}
+  <!-- This should not be compressed. Keep comments for prospective developers.... -->
+  <script>
+    // Global variables
+    // This indicates the location of the "raw" API
+    window.API_RAW = "{% url 'api_raw_top_level' api_name="raw" %}";
+    // This indicates the location of all "static" files.
+    //  Partials are stored under STATIC_URL/<app_name>/partials/
+    //  and they will NOT be parsed by Django. 
+    window.STATIC_URL = "{{ STATIC_URL }}";
+  </script>
 
-{% block breadcrumbs %}
-{% endblock %}
+  <!-- Include the AngularJS stuff right away, because it is needed for everything... -->
+  {% compress js %}
+  <script src="{{ STATIC_URL }}components/bower-angular/angular.js"></script>
+  <script src="{{ STATIC_URL }}js/app.js"></script>
+  <script src="{{ STATIC_URL }}js/controllers.js"></script>
+  {% endcompress %}
+</head>
 
-{% block content_title %}
-    <h1>Home</h1>
-{% endblock %}
+<body>
+  <div class="container">
 
-{% block content %}
-    <h2>Quick Links</h2>
-    <ul>
-        <li><a href="{% url 'powr:device_add' %}">Add Device</a></li>
-        <li><a href="{% url 'powr:satellite_add' %}">Add Satellite</a></li>
-    </ul>
-{% endblock %}
+    <div class="masthead">
+      <h3>POW-R</h3>
+      <h4 class="muted">Power Outlet Wireless Monitoring</h4>
+      <div class="navbar" ng-app="navList">
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </a>
+            <div class="nav-collapse collapse">
+              <ul class="nav" ng-controller="NavCtrl">
+                <li><a href="#">Quick Start</a></li>
+                <li ng-class="navClass('dashboard')"><a href="#/dashboard">Dashboard</a></li>
+                <li><a href="#" class="dropdown-toggle" data-hover="dropdown">Devices <span class="caret"></span></a>
+                  <ul class="dropdown-menu" style=" margin-left:150px; margin-right:150px;">
+                    <li><a href="#">View Current Devices</a></li>
+                    <li><a href="#">Add a New Device</a></li>
+                    <li><a href="#">Export Graphs</a></li>
+                  </ul>
+                </li>
+                <li ng-class="navClass('graphs')"><a href="#/graphs" class="dropdown-toggle" data-hover="dropdown">Graphs <span class="caret"></span></a>
+                  <ul class="dropdown-menu" style=" margin-left:150px; margin-right:150px;">
+                    <li><a href="#">Existing Graphs</a></li>
+                    <li><a href="#/graphs/new">Make a New Graph</a></li>
+                    <li><a href="#">Export Graphs</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">System</a></li>
+              </ul> <!-- /.nav --> 
+            </div><!-- /.nav-collapse.collapse -->
+          </div> <!-- /.container --> 
+        </div> <!-- /.navbar-inner --> 
+      </div> <!-- /.navbar --> 
+    </div> <!-- /.masthead --> 
+
+    <div ng-view></div>
+
+    <hr>
+
+    <div class="footer">
+      <p>&copy; POW-R 2013</p>
+    </div>
+  </div><!-- /container -->
+  <!-- Le javascript
+================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <!-- JQuery, cause everyone <3's it  -->
+  {% compress js %}
+  <script src="{{ STATIC_URL }}components/jquery/jquery.js" type="text/javascript"></script>
+  <!-- Bootstrap  -->
+  <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}components/twitter-bootstrap-hover-dropdown/twitter-bootstrap-hover-dropdown.js" type="text/javascript"></script>
+  <!-- JQPlot -->
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/jquery.jqplot.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.barRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.categoryAxisRenderer.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jqplot/plugins/jqplot.pointLabels.js"></script>
+  <!-- JQuery UI and Date Picker -->
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.core.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.datepicker.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.slider.js"></script>
+  <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-timepicker-addon/jquery-ui-timepicker-addon.js"></script>
+  {% endcompress %}
+</body>
+</html>
