--- a/src/haf/powr/static/powr/partials/devices.html
+++ b/src/haf/powr/static/powr/partials/devices.html
@@ -1,16 +1,31 @@
-  <div class="row">
+  <div class="row-fluid">
     <div class="span8">
         <h2>Devices</h2>
     </div><!-- /.span8 -->
     <div class="span3">
-        <button class="btn" type="button" ng-click="goNewDevice()">New Device</button>
+        <button class="btn btn-primary" type="button" ng-click="goNewDevice()">New Device</button>
     </div><!-- /.span3 -->
-  </div><!-- /.row -->
-  <table class="table table-striped table-bordered">
-    <tr>
-        <th>Name</th>
-    </tr>
-    <tr ng-repeat="object in objects">
-        <td><a href="#/devices/{{ object.id }}">{{ object.name }}</a></td>
-    </tr>
-  </table><!-- /.table.table-striped.table-bordered -->
+  </div><!-- /.row-fluid -->
+  <div class="row-fluid">
+    <div class="span8">
+        <input ng-model="filter.name" class="input-medium search-query" placeholder="Filter..">
+    </div>
+    <div class="span4">
+        <button class="btn" ng-click="filter.enabled = !filter.enabled" ng-show="filter.enabled">Show Disabled Devices</button>
+        <button class="btn" ng-click="filter.enabled = !filter.enabled" ng-show="!filter.enabled">Show Enabled Devices</button>
+    </div><!-- /.span4 -->
+  </div><!-- /.row-fluid -->
+  <div class="row-fluid" style="margin-top: 20px;">
+    <table class="table table-striped table-bordered">
+      <tr>
+          <th>Name</th>
+      </tr>
+      <tr ng-repeat="object in objects | filter:filter" ng-model="object">
+          <td><a href="#/devices/{{ object.id }}">{{ object.name }}</a></td>
+          <td style="width: 10%">
+              <button class="btn btn-danger" ng-click="disable(object)" ng-show="object.enabled">Disable</button>
+              <button class="btn btn-success" ng-click="disable(object)" ng-show="!object.enabled">Enable</button>
+          </td>
+      </tr>
+    </table><!-- /.table.table-striped.table-bordered -->
+  </div>
