--- a/src/haf/templates/home.html
+++ b/src/haf/templates/home.html
@@ -1,4 +1,5 @@
 {% load compress %}
+{% load verbatim %}
 {% load url from future %}
 <!doctype html>
 <html lang="en" ng-app="haf">
@@ -22,10 +23,16 @@
     //  Partials are stored under STATIC_URL/<app_name>/partials/
     //  and they will NOT be parsed by Django. 
     window.STATIC_URL = "{{ STATIC_URL }}";
+
+    // Login URL
+    window.LOGIN_URL = "{% url 'login' %}";
+    window.LOGOUT_URL = "{% url 'logout' %}";
+    window.LOGGED_IN = {{ user.is_authenticated|lower }};
   </script>
 
   <!-- Include the AngularJS stuff right away, because it is needed for everything... -->
   {% compress js %}
+  <script src="{{ STATIC_URL }}components/jquery/jquery.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}components/bower-angular/angular.js"></script>
   <script src="{{ STATIC_URL }}components/bower-angular-resource/angular-resource.js"></script>
   <script src="{{ STATIC_URL }}js/app.js"></script>
@@ -47,8 +54,15 @@
   <div class="container">
 
     <div class="masthead">
-      <h3>POW-R</h3>
-      <h4 class="muted">Power Outlet Wireless Monitoring</h4>
+      <div class="row-fluid">
+        <div class="span8">
+            <h3>POW-R</h3>
+        </div><!-- /.span8 -->
+        <div class="span4" ng-controller="LogoutCtrl">
+            <a  ng-click="logout()" ng-show="loggedIn">Log out</a>
+        </div><!-- /.span4 -->
+        <h4 class="muted">Power Outlet Wireless Monitoring</h4>
+      </div><!-- /.row-fluid -->
       <div class="navbar" ng-app="navList">
         <div class="navbar-inner">
           <div class="container">
@@ -90,12 +104,32 @@
       <p>&copy; POW-R 2013</p>
     </div>
   </div><!-- /container -->
+
+  <!-- Login modal -->
+  <div id="loginModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby='loginModal' aria-hidden='true' ng-controller="LoginCtrl">
+      <div class='modal-header'>
+          <h3 id="modalLoginLabel">Login</h3>
+      </div>
+      <div class="modal-body">
+            <form class="form-signin">
+              {% csrf_token %}
+              <h2 class="form-signin-heading">Please sign in</h2>
+              {% verbatim %}
+              <h3 style="color: red">{{ error }}</h3>
+              {% endverbatim %}
+              <input type="text" class="input-block-level" placeholder="Username" ng-model="form.username">
+              <input type="password" class="input-block-level" placeholder="Password" ng-model="form.password">
+              <button class="btn btn-large btn-primary" type="submit" ng-click="login()">Sign in</button>
+            </form>
+      </div>
+  </div><!-- /.modal.fade -->
+
   <!-- Le javascript
 ================================================== -->
   <!-- Placed at the end of the document so the pages load faster -->
   <!-- JQuery, cause everyone <3's it  -->
   {% compress js %}
-  <script src="{{ STATIC_URL }}components/jquery/jquery.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}components/jquery-cookie/jquery.cookie.js" type="text/javascript"></script>
   <!-- Bootstrap  -->
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}bootstrap/js/bootstrap-collapse.js" type="text/javascript"></script>
@@ -110,6 +144,23 @@
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.datepicker.js"></script>
   <!-- <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-ui/ui/jquery.ui.slider.js"></script> -->
   <script type="text/javascript" src="{{ STATIC_URL }}components/jquery-timepicker-addon/jquery-ui-timepicker-addon.js"></script>
+
+  <!-- Some logic to help with Django CSRF -->
+  <script>
+var csrftoken = $.cookie('csrftoken');
+function csrfSafeMethod(method) {
+    // these HTTP methods do not require CSRF protection
+    return (/^(GET|HEAD|OPTIONS|TRACE)$/.test(method));
+}
+$.ajaxSetup({
+    crossDomain: false, // obviates need for sameOrigin test
+    beforeSend: function(xhr, settings) {
+        if (!csrfSafeMethod(settings.type)) {
+            xhr.setRequestHeader("X-CSRFToken", csrftoken);
+        }
+    }
+});
+  </script>
   {% endcompress %}
 
 </body>
